Refactor API routes to include versioning (v1) for invoices, nla-checklists, nla-files, notaries, offices, office-features, office-forms, office-payments, office-services, permissions, and user-permissions handlers. (#3)
